# LoraLoader_with_trigger_word

./: .gitignore  README.md  __init__.py  constants.py  lora_loader_model_only_trigger_words.py  lora_loader_trigger_words.py  lora_model_loader.py  node_definition.py  preview_api.py  pyproject.toml  services.py  trigger_word_analyzer.py  trigger_word_repository.py  trigger_word_resolver.py
docs/: civarchive_refactor_plan.md  civarchive_refactor_progress.md
reference_metadata/: huggingface_lora_catalog.json
remote_metadata/: __init__.py  civarchive_client.py  civitai_client.py  genur_client.py  providers.py
tests/: test_lora_loader_nodes.py  test_trigger_word_resolver.py
tools/: build_huggingface_reference_catalog.py  validate_reference_trigger_words.py
web/: lora_loader_with_trigger_word.js
